I18ned UrbanCmd